feat(test): add unit tests
